# COMP307AWS_GRP_BKAI

./: .gitignore  README.md
backend/: DBManager.py  app.py  models.py  pyproject.toml  requirements.txt  setup_aws.bash  setup_aws.ps1
backend/models/: __init__.py  models.py
backend/static/css/: TEMP.txt
backend/templates/: add-movie.html  edit-movie.html  forum.html  view-movies.html
backend/templates/auth/: login.html  register.html
backend/templates/layout/: base.html
frontend/: TEMP.txt  index.html  main.js  package-lock.json  package.json  tailwind.config.js
frontend/src/css/: output.css
frontend/src/js/: router.js
frontend/src/pages/auth/: login.html  register.html
frontend/src/pages/movies/: movies-detail.html  movies.html  update-movie.html  upload-movie.html
